--- a/Sobre a Plug Informáticaindex.html
+++ b/Sobre a Plug Informáticaindex.html
@@ -1,7 +1,11 @@
+<!DOCTYPE html>
+<html lang ="pt-br">
+    <meta charset="UTF-8">
 <h1> Sobre a Plug Informática </h1>
 
 <p> Localizado em frete a prefeitura de Corumbataí do Sul. </p>
 
-<p> A Plug Informática busca trazer para os mais jovens oportunidades de entrar no mercado de trabalho além de oferecer ótimos cursos de computação. </p>
+<p> A <strong>Plug Informática</strong> busca trazer para os mais jovens oportunidades de entrar no mercado de trabalho além de oferecer ótimos cursos de computação. </p>
 
 <p> Oferecemos profissionais experientes que estão a disposição para o que você precisar. </p>
+</html>
